# package_xml_validation

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  Readme.md  pyproject.toml
.github/workflows/: lint.yml  unittests.yml
log/: latest_list
package_xml_validation/: package_xml_validator.py  ros2_pkg_validator.py  t
package_xml_validation/data/: cmake_rosdep_map.yaml
package_xml_validation/helpers/: cmake_parsers.py  condition_eval.py  exception_parser.py  find_launch_dependencies.py  logger.py  package_types.py  pkg_xml_formatter.py  rosdep_validator.py  rosdep_wrapper.py  validation_steps.py  verify_rosdep_mapping.py  workspace.py
package_xml_validation/helpers/formatter/: __init__.py  constants.py  dependency_queries.py  indentation.py  mutations.py  structural_checks.py
package_xml_validation/helpers/validation_steps/: __init__.py  _base.py  build_type_export_step.py  buildtool_step.py  cmake_comparison_step.py  dependency_exclusivity_step.py  formatter_step.py  launch_dependency_step.py  manifest_schema_step.py  member_of_group_step.py  rosdep_check_step.py  rosidl_runtime_step.py
ros2_pkg_validator/: package_xml_formatter.py
ros2_pkg_validator/helpers/: cmake_parsers.py  logger.py  pkg_xml_formatter.py  rosdep_validator.py
scripts/: package_xml_formatter.py  ros2-pkg-validator.py
scripts/helpers/: cmake_parsers.py  rosdep_validator.py
test/: test_package_xml_linting_and_formatting.py
test/examples/: corrected_01_fail.xml  corrected_05_fail.xml  corrected_08_fail.xml  corrected_12_fail.xml  original_01_fail copy.xml  original_03_fail.xml  original_04_fail.xml  original_06_fail.xml  original_08_fail.xml  original_10_fail.xml  original_11_fail.xml
tests/: __init__.py  coverage_test.py  test_build_type_export_step.py  test_cmake_comparison.py  test_cmake_comparison_step_unit.py  test_cmake_parser.py  test_condition_aware_steps.py  test_condition_eval.py  test_dependency_exceptions.py  test_dependency_exclusivity_step.py  test_export_tag_correction.py  test_find_launch_dependencies.py  test_format3_optional_tags.py  test_ignore_formatting_errors_mode.py  test_manifest_schema_step.py  test_missing_deps_only_mode.py  test_msg_pkg_group_member.py  test_package_xml_formatted_cli.py  test_package_xml_linting_and_formatting.py  test_package_xml_validator_init.py  test_pkg_missing_launch_deps.py  test_pkg_xml_formatter_edge_cases.py  test_pky_type_dependent_validation.py  test_python_buildtool_soft_finding.py  test_rep149_followup.py  test_rodep_validator.py  test_rosdep_check_step.py  test_verify_rosdep_mapping.py  test_workspace.py
tests/data/cmake_examples/common_patterns/: CMakeLists.txt
tests/data/cmake_examples/hector_gamepad_manager_plugins/: CMakeLists.txt
tests/data/cmake_examples/hector_ros2_utils/: CMakeLists.txt
tests/examples/: corrected_03_fail.xml  corrected_06_fail.xml  corrected_12_fail.xml  incorrect_rosdeps.xml  original_02_correct.xml  original_03_fail.xml  original_04_fail.xml  original_05_fail.xml  original_06_fail.xml  original_08_fail.xml  original_09_fail.xml  original_10_fail.xml  original_12_fail.xml
tests/examples/cmake_specific_tests/athena_description/pkg_correct/: CMakeLists.txt  package.xml
tests/examples/cmake_specific_tests/athena_description/pkg_missing_build_depends/: package.xml
tests/examples/cmake_specific_tests/hector_gamepad_manager/pkg_missing_build_depends/: package.xml
tests/examples/cmake_specific_tests/hector_gamepad_manager/pkg_missing_test_depends/: package.xml
tests/examples/cmake_specific_tests/moveit_twist_controller/pkg_correct/: package.xml
tests/examples/cmake_specific_tests/moveit_twist_controller/pkg_missing_build_depends/: package.xml
tests/examples/cmake_specific_tests/quiet_find_package/pkg_correct/: CMakeLists.txt  package.xml
tests/examples/cmakes/athena_description/: CMakeLists.txt
tests/examples/cmakes/moveit_twist_controller/: package.xml
tests/examples/exception_tests/cmake_exceptions/pkg_with_exception/: CMakeLists.txt  package.xml
tests/examples/exception_tests/launch_exceptions/pkg_without_exception/: CMakeLists.txt  package.xml
tests/examples/export_tag_examples/ament_python/pkg_false_buildtool_depend/: package.xml
tests/examples/launch_examples/: better_launch_example.launch.py  hector_launch_component.yaml  hector_launch_component_comment.yaml  python_composable_nodes.launch.py  python_example.launch.py  python_example_bad.launch.py  python_example_comment.launch.py  python_find_package_prefix.launch.py  python_gazebo_launch.py  python_world.launch.py  xml_composable_container.launch.xml  xml_example.launch.xml  xml_example_comment.launch.xml  yaml_example.launch.yml  yaml_example_bad.launch.yml  yaml_example_comment.launch.yml
tests/examples/launch_pkg_examples/hector_controller_spawner/pkg_correct/: CMakeLists.txt  package.xml
tests/examples/launch_pkg_examples/hector_controller_spawner/pkg_correct/config/: athena.yaml
tests/examples/launch_pkg_examples/hector_controller_spawner/pkg_correct/launch/: hector_controller_spawner_launch.yml
tests/examples/launch_pkg_examples/hector_controller_spawner/pkg_correct/test/: test_spawner_basic.test.py  test_spawner_chain_detection.test.py  test_spawner_estop.test.py
tests/examples/launch_pkg_examples/hector_controller_spawner/pkg_correct/test/config/: controller_spawner_chain_detection.yaml  controller_spawner_with_estop.yaml
tests/examples/package_xml_examples/: corrected_01_fail.xml  corrected_05_fail.xml  corrected_06_fail.xml  corrected_07_fail.xml  corrected_13_fail.xml  corrected_14_fail.xml  original_01_fail.xml  original_02_correct.xml  original_04_fail.xml  original_06_fail.xml  original_07_fail.xml  original_12_fail.xml  original_13_fail.xml  original_14_fail.xml  original_15_fail.xml
tests/examples/unfixable_pkgs/: description_twice_package.xml  missing_description_package..xml  missing_license_package.xml  missing_maintainer_package .xml  missing_name_package.xml  missing_version_package.xml  name_twice_package.xml  unknown_tag_package.xml  version_twice_package.xml
(+39 files in other folders)
