<package format="3">
  <name>athena_description</name>
  <version>0.0.0</version>
  <description>This package contains the model description for the Athena robot</description>
  <maintainer email="mail@jonas-suess.de">Jonas Suess</maintainer>
  <license>ALL THE LICENSE BELONGS TO TEAM HECTOR</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>

  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>hector_xacro_tools</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_twist_controller</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>trac_ik</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
